# KobeanREST

./: .betterleak  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  fix-regexes.mjs  fix-tests.mjs  fix-tests2.mjs  index.html  opencode.jsonc  package-lock.json  package.json  tsconfig.json  vite.config.ts
.codebuddy/: settings.json
.gemini/: settings.json  settings.json.bak
.github/: code-review-graph.instruction.md
docs/: agent-rules.md  download.md  implementation-roadmap.md  known-issues.md  native-readiness.md  refactoring-plan.md  release-operations.md  release-qa.md
docs-site/: index.html  package.json  tsconfig.json  vite.config.ts
scripts/: build-updater-manifest.mjs  check-release-preflight.mjs  check-secrets.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: http_client.rs  lib.rs  local_only.rs  main.rs  persistence.rs  secrets.rs
tests/: api-auth-contract.test.mjs  auto-update-contract.test.mjs  docs-site-contract.test.mjs  download-docs-contract.test.mjs  editable-ui-contract.test.mjs  end-to-end-qa-contract.test.mjs  environment-editor-contract.test.mjs  history-viewer-contract.test.mjs  import-export-contract.test.mjs  local-only-contract.test.mjs  native-readiness-contract.test.mjs  persistence-contract.test.mjs  release-hardening-contract.test.mjs  release-operations-contract.test.mjs  release-preflight-contract.test.mjs  rest-client-contract.test.mjs  secret-storage-contract.test.mjs  settings-contract.test.mjs  (+2 more)
(+83 files in other folders)
