[package]
name = "kobeanrest"
version = "0.1.2"
description = "Local-first desktop API client for REST and HTTP workflows."
authors = ["Nguyen Thai Minh Thien (Joseph)"]
license = "MIT"
repository = "https://github.com/thienng-it/KobeanREST"
edition = "2021"

[lib]
name = "kobeanrest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "kobeanrest"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
keyring = "3"
reqwest = { version = "0.13", default-features = false, features = ["brotli", "deflate", "gzip", "json", "rustls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-stronghold = "2"
thiserror = "1"
uuid = { version = "1.23.4", features = ["v4", "serde"] }

[features]
default = []
